# box_of_bolls

./: main.py  pyproject.toml
projects/: Заставка1.json
src/: animation.py  editor_window.py  login_window.py  project_manager.py
src/objects/: ball.py
ui/: editor_window_dark.ui  login_ui.py  main_window.py  main_window.ui
ui/py/: editor_window.py  login_ui.py  main_window.py
