[project]
name = "box-of-balls"
version = "0.1.0"
description = ""
authors = [
    {name = "Polina Belaya",email = "polinabeline@gmail.com"}
]
requires-python = "3.11.9"
dependencies = [
    "pyside6 (>=6.10.2,<7.0.0)",
    "shiboken6 (>=6.10.2,<7.0.0)",
    "pyqtdarktheme (>=2.1.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pyinstaller (>=6.18.0,<7.0.0)"
]
