[project]
name = "box-of-balls"
version = "0.1.0"
description = ""
authors = [
    {name = "Polina Belaya",email = "polinabeline@gmail.com"}
]
requires-python = ">=3.11,<3.12"

dependencies = [
    "pyside6 (>=6.10.2,<7.0.0)",
    "shiboken6 (>=6.10.2,<7.0.0)",
    "pyqtdarktheme (>=2.1.0,<3.0.0)",
    "ruff (>=0.15.0,<0.16.0)",
    "mypy (>=1.19.1,<2.0.0)",
    "typing-extensions (>=4.15.0,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pyinstaller (>=6.18.0,<7.0.0)"
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["resources", "ui", 'main.py']
extend-exclude = [".venv", "venv", "build", "dist", "__pycache__", "migrations"]

[tool.ruff.lint]
# Набор правил: базовые ошибки/предупреждения + сортировка импортов + апгрейды и упрощения
select = ["E4", "E7", "E9", "F", "W", "I", "UP", "B", "SIM"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["resources", "ui", 'main.py']
combine-as-imports = true
force-sort-within-sections = true

[tool.ruff.format]
quote-style = "double"     # "double" | "single"
indent-style = "space"
line-ending = "lf"
docstring-code-format = true

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_configs = true
check_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true